@@ -2,6 +2,10 @@ package cn.ashersu.omni.model.service.impl;
 
 import cn.ashersu.omni.model.completion.chat.ChatCompletionRequest;
 import cn.ashersu.omni.model.completion.chat.ChatCompletionResult;
+import cn.ashersu.omni.model.completion.chat.ChatMessage;
+import cn.ashersu.omni.model.service.impl.testutil.JsonMockLoader;
+import cn.ashersu.omni.model.service.openai.OpenAIConfig;
+import cn.ashersu.omni.model.service.openai.item.ChatCompletionService;
 import okhttp3.ConnectionPool;
 import okhttp3.mockwebserver.MockResponse;
 import okhttp3.mockwebserver.MockWebServer;
@@ -11,6 +15,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -25,16 +30,14 @@ class ChatCompletionServiceTest {
         server.start();
 
         // enqueue mock response
-        String mockJson = cn.ashersu.omni.model.service.impl.testutil.JsonMockLoader.json("chatCompletion.json");
+        String mockJson = JsonMockLoader.json("chatCompletion.json");
         server.enqueue(new MockResponse()
                 .setBody(mockJson)
                 .addHeader("Content-Type", "application/json"));
 
         OpenAIConfig cfg = OpenAIConfig.builder()
                 .baseUrl(server.url("/v1/").toString())
-                .connectTimeout(1)
                 .connectionPool(new ConnectionPool())
-                .maxIdleConnection(1)
                 .readTimeout(Duration.ofSeconds(1))
                 .token("token")
                 .build();
@@ -50,7 +53,7 @@ class ChatCompletionServiceTest {
     void testCreateChatCompletion_viaHttpMock() throws InterruptedException {
         ChatCompletionRequest req = ChatCompletionRequest.builder()
                 .model("test-model")
-                .messages(List.of())
+                .messages(Collections.singletonList(new ChatMessage("user", "Hello")))
                 .build();
         ChatCompletionResult res = service.createChatCompletion(req);
 
